# drone-wars

./: .gitignore  ART.md  PLAN.md  SPEC.md  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json
scripts/: process_assets.py
src/: main.ts  style.css
src/buildings/: CommandCore.ts
src/core/: Building.ts  BuildingManager.ts  GridManager.ts  PathfindingManager.ts  Projectile.ts  ProjectileManager.ts  ResourceManager.ts  ResourceNode.ts  Unit.ts
src/core/__tests__/: PathfindingManager.test.ts  Unit.test.ts
src/engine/: CameraController.ts  GameLoop.ts  InteractionManager.ts  SceneManager.ts
src/factions/civilians/: SecurityDrone.ts
src/factions/enforcers/: Peacekeeper.ts  ScrapDrone.ts
src/factions/terraformers/: PlasmaCutter.ts  Thumper.ts
src/ui/: Minimap.ts  UIManager.ts
src/ui/__tests__/: UIManager.test.ts
src/utils/: math.ts
src/utils/__tests__/: math.test.ts
